# memory-module

./: AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  COMPREHENSIVE_MEMORY_MODULE_TODO.md  Cargo.toml  IMPROVEMENTS.md  README.md  TODO_API_DOCUMENTATION.md  TODO_ARCHITECTURE_DOCUMENTATION.md
.github/workflows/: docs.yml
benches/: map_perf_bench.rs  store_bench.rs
docs/: indexing_comparison.md
examples/: basic_usage.rs
migrations/: 0001_initial.sql
src/: concurrent_store.rs  error.rs  faiss_index.rs  lib.rs  migration.rs  model.rs  persistence.rs  sharded_store.rs  simd.rs  simd_utils.rs  storage.rs  store.rs
tests/: file_backend_test.rs  integration_test.rs  property_tests.rs
